--- a/08-HTML/homework/style.css
+++ b/08-HTML/homework/style.css
@@ -1,3 +1,12 @@
+body {
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaBTjSTDxPit15HG1vt3FrJBmZdFWs_K7-bQ&usqp=CAU');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: center;
+    display: flex;
+    justify-content: center;
+}
+
 
     h1 {
         color: blue
@@ -5,6 +14,7 @@
 
     img {
         width: 400px;
+     
     }
 
     #thirDiv{
@@ -17,5 +27,11 @@
     #spanID{
         font-size: 18px;
         margin: 50px;
+        background-color: antiquewhite;
     }
-
+    .div_centrado{
+        width: 200px;       
+        height: 200px;
+        margin: 0 auto;
+        background-color: antiquewhite;
+    }
